--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" ng-app="famousAngularStarter">
+<html class="no-js" ng-app="moby">
   <head>
     <meta charset="utf-8">
     <title>Famo.us/Angular</title>
@@ -39,7 +39,7 @@
     <script src="//code.famo.us/famous-angular/latest/famous-angular.js"></script>
 
     <!-- build:js({app,.tmp}) scripts/main.js -->
-    <script src="scripts/famousAngularStarter.js"></script>
+    <script src="scripts/app.js"></script>
     <script src="scripts/main/main-ctrl.js"></script>
     <!-- inject:partials -->
     <!-- endinject -->
