--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
     <!-- endbuild -->
 
     <!-- build:css({.tmp,app}) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="themes/default/main.css">
     <!-- endbuild -->
     <link rel="stylesheet" href="//code.famo.us/famous-angular/latest/famous-angular.css">
 
